# LatteLabLib

./: README.md  run.py  setup.cfg  setup.py
LatteLab/: __init__.py  base.py  config.py  gpu_backend.py  graphics.py  kernels.py  lbm.py  sim_flags.py
LatteLab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LatteLab/kernels/: d2q9_kernel.cl
LatteLab/solvers/: d2q9.py
LatteLab/utils/: constants.py  device_selector.py  plots.py
LatteLabLib/: config.py  graphics.py  lbm.py
examples/: d2q9_channel_flow.py  nographics.py  plotting.py  poiseulle.py  simple.py  test.py
tests/: test_gpu_backend.py  test_jax.py  test_vispy.py
