[metadata]
name = LatteLab
version = 0.1.0
description = A simple Python package for running LBM-based CFD simulations.
long_description = file: README.md
long_description_content_type = text/markdown
author = Gustavo A. Verneck
author_email = gustavoverneck@gmail.com
url = https://github.com/gustavoverneck/LatteLabLib
license = GNUv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
python_requires = >=3.12.0

[options]
packages = find:
install_requires =
    jaxlib==0.5.0
    jax==0.5.0
    numpy==1.26.4
    vispy==0.14.3
    pyopengl-3.1.9